Fixed Main styling to wrap facts section

--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@ body {
 .main--unordered_list {
   margin: 0;
   margin-top: 46px;
+  max-width: 400px;
 }
 
 .main--list_item {
